[package]
name = "rust-bpm-analyzer"
version = "0.1.0"
edition = "2024"
authors = ["Killian PICOT"]
description = "A real-time BPM analyzer with Ableton Link synchronization."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/kiki442002/rust-bpm-analyzer"

[dependencies]
# Audio
cpal = "0.16.0"
# Sync
rusty_link = "0.4.6"
# DSP
biquad = "0.5.0"
aubio = { version = "0.2", features = ["bindgen", "static", "builtin"] }

# Embedded Linux specific dependencies (Milk-V Duo, Raspberry Pi)
#[cfg(not(all(any(target_arch = "aarch64", target_arch = "arm"), target_os = "linux")))]
gpio-cdev = "0.6.0"

#[cfg(not(all(any(target_arch = "aarch64", target_arch = "arm"), target_os = "linux")))]
alsa = "0.11.0"

# GUI only for Desktop (Mac, Windows, Linux x86)
# Exclude Linux ARM/ARM64 (Raspberry Pi, Milk-V)
[target.'cfg(not(all(any(target_arch = "aarch64", target_arch = "arm"), target_os = "linux")))'.dependencies]
iced = "0.13"
image = "0.24" # To load the window icon

[build-dependencies]
winres = "0.1"


[package.metadata.bundle]
name = "BPM Analyzer"
identifier = "com.killian.rust-bpm-analyzer"
icon = ["assets/icon.png"]
version = "0.1.0"
copyright = "Copyright 2025 Killian PICOT"
category = "Music"
short_description = "BPM Analyzer with Ableton Link"
osx_info_plist_extst = "./assets/Info.plist"

