[package]
name = "rust-bpm-analyzer"
version = "0.1.0"
edition = "2024"
authors = ["Killian PICOT"]
description = "A real-time BPM analyzer with Ableton Link synchronization."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/kiki442002/rust-bpm-analyzer"

[dependencies]
# Audio
cpal = "0.16.0"
# Sync
rusty_link = "0.4.6"
# DSP
biquad = "0.5.0"
aubio = { version = "0.2", features = ["bindgen", "static", "builtin"] }



# Embedded Linux specific dependencies (Milk-V Duo, Raspberry Pi)
[target.aarch64-unknown-linux-gnu.dependencies]
alsa = "0.9.0"
gpio-cdev = { version = "0.6.0", features = ["async-tokio"] }
linux-embedded-hal = "0.4.1"
embedded-graphics = "0.8.1"
ssd1306 = "0.10.0"
self_update = { version = "0.42", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }
rtnetlink = "0.20.0"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal", "process"] }
libc = "0.2.180"
tinybmp = "0.7.0"
netlink-packet-core = "0.8.1"
netlink-packet-route = "0.28.0"
futures = "0.3.31"

# GUI only for Desktop (Mac, Windows, Linux x86)
# Exclude Linux ARM/ARM64 (Raspberry Pi, Milk-V)
[target.'cfg(not(all(any(target_arch = "aarch64", target_arch = "arm"), target_os = "linux")))'.dependencies]
iced = "0.13"
image = "0.24" # To load the window icon




[build-dependencies]
winres = "0.1"


[package.metadata.bundle]
name = "BPM Analyzer"
identifier = "com.killian.rust-bpm-analyzer"
icon = ["assets/icon.png"]
version = "0.1.0"
copyright = "Copyright 2025 Killian PICOT"
category = "Music"
short_description = "BPM Analyzer with Ableton Link"
osx_info_plist_extst = "./assets/Info.plist"

